--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
