--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ dist-ssr
 .env.local
 .env.development
 .env.production
+
+# Array para la carga de productos en Firebase
+asyncMock.js
+
+# Función para la carga de productos en Firebase
+exportProducts.js
